feat: Implement internationalization and SEO enhancements
Introduces multi-language support and adds SEO meta tags for better discoverability. The Navbar, Footer, and Sidebar components are updated to integrate i18n context and provide translated labels. The Home page now supports dynamic search queries and displays translated hero content.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="EATGF - The Enterprise AI-Aligned Technical Governance Framework. Unified documentation and cloud orchestration for modern engineering teams.">
+    <meta name="keywords" content="governance, ai, cloud, documentation, framework, enterprise, react, typescript">
     <title>EATGF | Enterprise Governance Docs</title>
     
     <!-- PWA Settings -->
