--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="EATGF - The Enterprise AI-Aligned Technical Governance Framework. Unified documentation and cloud orchestration for modern engineering teams.">
-    <meta name="keywords" content="governance, ai, cloud, documentation, framework, enterprise, react, typescript">
-    <title>EATGF | Enterprise Governance Docs</title>
+    <meta name="description" content="EATGF - The Technical Governance Framework. Unified documentation and cloud orchestration for enterprises, startups, and developers.">
+    <meta name="keywords" content="governance, cloud, documentation, framework, enterprise, startup, developers, react, typescript">
+    <title>EATGF | Technical Governance Docs</title>
     
     <!-- PWA Settings -->
     <link rel="manifest" href="/manifest.json">
